# linuxdeploy-plugin-appimage

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: main.yml
ci/: build-appimage.sh  build-bundle.sh  build-in-docker.sh
cmake/toolchains/: armhf-linux-gnu.cmake
lib/: CMakeLists.txt
resources/: linuxdeploy-plugin-appimage.desktop
src/: CMakeLists.txt  main.cpp
travis/: Dockerfile  Dockerfile.aarch64  Dockerfile.armhf  Dockerfile.i386  Dockerfile.x86_64  build-appimage.sh  build-docker.sh
